--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
+    "svelte-scrollto": "^0.1.1",
     "webpack": "^4.7.0"
   }
 }
