--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "compression": "^1.7.1",
+    "d3-scale": "^3.2.1",
     "front-matter": "^3.1.0",
     "glob": "^7.1.6",
     "markdown-it": "^10.0.0",
