--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bgykaranten",
+  "name": "BGYKAANTEN",
   "description": "Balassagyarmat nem hivatalos COVID-19 járvány tájékoztató oldala.",
   "version": "0.0.1",
   "scripts": {
